--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">멋쟁이사자처럼에 오신 걸 환영합니다!</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">멋사에 오신 걸 환영합니다!</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">우리는 멋사를 하면서 알게 될 것이 무수히 많을텐데요! 일단 먼저 멋사가 어떤 곳인지 알아볼까요~</p>
+          <p class="text-white-75 font-weight-light mb-5">우리는 멋사를 하면서 알게 될 것이 무수히 많을텐데요!<br> 일단 먼저 멋사가 어떤 곳인지 알아볼까요~</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
@@ -76,7 +76,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">멋쟁이사자처럼이란?</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">코딩을 어려워 하는 사람들, 자신의 기가막힌 아이디어를 실행할 능력이 없는 사람들에게 기회를 주고자 저희가 나섰습니다!!</p>
+          <p class="text-white-50 mb-4">코딩을 어려워 하는 사람들, 자신의 기가막힌 아이디어를 실행할 능력이 없는 사람들에게<br> 기회를 주고자 저희가 나섰습니다!!</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
         </div>
       </div>
@@ -92,29 +92,22 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">PROGRAMING IS LIKE DIAMOND</h3>
-            <p class="text-muted mb-0">프로그래밍은 놀랍습니다 어떻게 사용하냐에 따라 다이아몬드와 같은 가치를 지니기 때문이죠</p>
+            <h3 class="h4 mb-2">PROGRAMING<br> IS LIKE DIAMOND</h3>
+            <p class="text-muted mb-0">프로그래밍은 놀랍습니다<br> 어떻게 사용하냐에 따라 다이아몬드와 같은 가치를 지니기 때문이죠</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Up to Date</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+            <h3 class="h4 mb-2">HACK YOUR LIFE</h3>
+            <p class="text-muted mb-0">프로그래밍은 가능성입니다<br> 자신만이 생각하고 있던 상상력을 터트려주세요! </p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ready to Publish</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+            <h3 class="h4 mb-2">Hello World</h3>
+            <p class="text-muted mb-0">프로그래밍은 세계가 주목합니다<br> 우리를 더 최고로 만들어갈 수 있는 기회를 잡으세요!</p>
           </div>
         </div>
       </div>
