--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
             <p class="text-muted mb-0">프로그래밍은 세계가 주목합니다<br> 우리를 더 최고로 만들어갈 수 있는 기회를 잡으세요!</p>
           </div>
         </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+            <h3 class="h4 mb-2">CHANGE LIFE</h3>
+            <p class="text-muted mb-0">프로그래밍은 삶에 영향을 줍니다<br> 더 나은 삶, 더 풍요로운 세상을 만들어보세요! </p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
