--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
             <h3 class="h4 mb-2">CHANGE LIFE</h3>
-            <p class="text-muted mb-0">프로그래밍은 삶에 영향을 줍니다<br> 더 나은 삶, 더 풍요로운 세상을 만들어보세요! </p>
+            <p class="text-muted mb-0">프로그래밍은 삶에 영향을 줍니다<br> 더 나은 삶, 더 풍요로운 세상을<br>만들어보세요! </p>
           </div>
         </div>
       </div>
