--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             }
 
             .footer{
-                grid-template-columns: repeat(4, 120px);
+                grid-template-columns: repeat(3, 130px);
             }
 
             .footer div img{
@@ -218,8 +218,15 @@
                 height: 40px;
             }
 
+            .footer div{
+                grid-column-start: 3;
+                grid-column-end: 4;
+                justify-self: center;
+                align-self: end;
+            }
+
             .contack{
-                width: 450px;
+                width: 400px;
             }
         }
 
