--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
             justify-self: center;
             align-self: end;
         }
+
+        .footer div a:hover{
+            cursor: pointer;
+        }
         
         .resume{
             display: flex;
@@ -233,8 +237,8 @@
     </style>
     <script>
         function submit(){
-            alert("지금은 모집기간이 아닙니다.(3.16 ~ 3/30)");
-            // location.href = '#';
+            // alert("지금은 모집기간이 아닙니다.(3.16 ~ 3/30)");
+            location.href = 'https://forms.gle/St1ou2so5XVxdScc8';
         }
     </script>
 </head>
@@ -309,7 +313,7 @@
         <img class="contack" src="footer.png" width="800px"/>
         <div>
             <a href="http://pf.kakao.com/_MxlrWj/chat"><img style="margin: 0 5px 10px 0;" src="kakao.jpg" width="50px" height="50px"/></a>
-            <a href="https://www.facebook.com/likelionkelmyung"><img style="margin-bottom: 10px;" src="facebook.png" width="50px" height="50px"/></a>
+            <a href="https://www.facebook.com/likelionkeimyung"><img style="margin-bottom: 10px;" src="facebook.png" width="50px" height="50px"/></a>
             <a href="https://www.instagram.com/kmu_likelion/?hl=ko"><img src="instagram.jpg" width="70px" height="70px"/></a>
         </div>
     </div>
