--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
                 width: 100%;
             }
 
+            #schedule img{
+                width: 400px;
+            }
+
             .footer{
                 grid-template-columns: repeat(3, 130px);
             }
@@ -261,7 +265,7 @@
     </div>
     <div id="schedule" style="text-align: center; margin-top: 80px;">
         <h1 style="color: orange;">Schedule</h1>
-        <img src="schdule2020.PNG" width="100%"/>
+        <img src="schdule2020.PNG" width="80%"/>
     </div>
     <div id="admin" class="out_name_box">
         <div class="name_box" style="text-align: center;">
