--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@
     </style>
     <script>
         function submit(){
-            // alert("지금은 모집기간이 아닙니다.(3.16 ~ 3/30)");
-            location.href = 'https://forms.gle/St1ou2so5XVxdScc8';
+            alert("지금은 모집기간이 아닙니다.(3.16 ~ 3/30)");
         }
     </script>
 </head>
