--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- nav -->
-    <div class="navTop">
+    <div class="nav">
         <div class="logo">
             <a>멋쟁이사자처럼 x 계명대학교</a>
         </div>
